<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormActivity">

    <RelativeLayout
        android:id="@+id/edRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_edit"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/text_24_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/user_form"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/edRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="30dp"
                >
                <LinearLayout
                    android:id="@+id/edLL1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/text_14sp_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/common_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/profile_edittext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edLL2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/text_14sp_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designation" />

                    <EditText
                        android:id="@+id/etDesignation"
                        style="@style/common_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/profile_edittext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edLL3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/text_14sp_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/userid" />

                    <EditText
                        android:id="@+id/etUserId"
                        style="@style/common_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/profile_edittext"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edLL4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    tools:ignore="UselessParent">

                    <TextView
                        style="@style/text_14sp_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blood_group" />

                    <EditText
                        android:id="@+id/etBloodGroup"
                        style="@style/common_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/profile_edittext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        tools:ignore="LabelFor,MissingConstraints,RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnUpdate"
                style="@style/round_button_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:paddingHorizontal="35dp"
                android:text="@string/update"
                />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/round_button_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:enabled="true"
                android:paddingHorizontal="35dp"
                android:text="@string/submit"
                />
            <TextView
                android:id="@+id/txtList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                />
        </LinearLayout>







    </androidx.core.widget.NestedScrollView>


</RelativeLayout>